--- a/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/public/locales/raw.en.json
+++ b/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/public/locales/raw.en.json
@@ -144,7 +144,7 @@
     "defaultMessage": "Create API"
   },
   "Apis.Create.GraphQL.Steps.ProvideGraphQL.Input.file.dropzone": {
-    "defaultMessage": "Drag & Drop files here {break} or {break} Browse files"
+    "defaultMessage": "Drag & Drop files here {break} or {break} Browse files{break}({accept})"
   },
   "Apis.Create.GraphQL.Steps.ProvideGraphQL.Input.file.upload": {
     "defaultMessage": "Browse File to Upload"
@@ -236,9 +236,6 @@
   "Apis.Details.APIDefinition.APIDefinition.api.definition.updated.successfully": {
     "defaultMessage": "API Definition updated successfully"
   },
-  "Apis.Details.APIDefinition.APIDefinition.api.outdated.definition": {
-    "defaultMessage": "Current API definition outdated, You can either re-import existing resource or create new version"
-  },
   "Apis.Details.APIDefinition.APIDefinition.async.api.definition.updated.successfully": {
     "defaultMessage": "API Definition updated successfully"
   },
@@ -251,23 +248,11 @@
   "Apis.Details.APIDefinition.APIDefinition.audit.api": {
     "defaultMessage": "Audit API"
   },
-  "Apis.Details.APIDefinition.APIDefinition.btn.cancel": {
-    "defaultMessage": "Cancel"
-  },
   "Apis.Details.APIDefinition.APIDefinition.btn.close": {
     "defaultMessage": "Close"
   },
-  "Apis.Details.APIDefinition.APIDefinition.btn.hide.diff": {
-    "defaultMessage": "Hide Diff"
-  },
   "Apis.Details.APIDefinition.APIDefinition.btn.no": {
     "defaultMessage": "CANCEL"
-  },
-  "Apis.Details.APIDefinition.APIDefinition.btn.reimport": {
-    "defaultMessage": "Re-import"
-  },
-  "Apis.Details.APIDefinition.APIDefinition.btn.show.diff": {
-    "defaultMessage": "Show Diff"
   },
   "Apis.Details.APIDefinition.APIDefinition.convert.to": {
     "defaultMessage": "Convert to"
@@ -325,12 +310,6 @@
   },
   "Apis.Details.APIDefinition.APIDefinition.import.wsdl": {
     "defaultMessage": "Import WSDL"
-  },
-  "Apis.Details.APIDefinition.APIDefinition.outdated.api.definition": {
-    "defaultMessage": "Outdated Definition"
-  },
-  "Apis.Details.APIDefinition.APIDefinition.outdated.definition": {
-    "defaultMessage": "Outdated Definition"
   },
   "Apis.Details.APIDefinition.APIDefinition.save.api.definition": {
     "defaultMessage": "Save API Definition"
@@ -437,6 +416,42 @@
   },
   "Apis.Details.APIDefinition.AuditApi.tooltip.severity": {
     "defaultMessage": "Severity ranges from:"
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.api.outdated.definition": {
+    "defaultMessage": "Current API definition is outdated. You can either re-import the new definition or create a new version of this API."
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.btn.cancel": {
+    "defaultMessage": "Cancel"
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.btn.hide.diff": {
+    "defaultMessage": "Hide Diff"
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.btn.reimport": {
+    "defaultMessage": "Re-import"
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.btn.show.diff": {
+    "defaultMessage": "Show Diff"
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.import.error": {
+    "defaultMessage": "Error while re-importing API definition"
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.import.success": {
+    "defaultMessage": "Re-imported API definition successfully!"
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.new.api.definition.error": {
+    "defaultMessage": "Something went wrong while getting the new API definition."
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.outdated.definition": {
+    "defaultMessage": "Outdated Definition"
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.outdated.definition.error": {
+    "defaultMessage": "Something went wrong while getting the outdated API definition."
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.outdated.definition.heading": {
+    "defaultMessage": "Outdated Definition"
+  },
+  "Apis.Details.APIDefinition.DefinitionOutdated.service.retrieve.error": {
+    "defaultMessage": "Something went wrong while retrieving service information"
   },
   "Apis.Details.APIDefinition.ImportDefinition.WSDL.updated.successfully": {
     "defaultMessage": "WSDL Updated Successfully"
@@ -581,6 +596,9 @@
   },
   "Apis.Details.Configurartion.components.QueryAnalysis.edit": {
     "defaultMessage": "Edit Complexity Values"
+  },
+  "Apis.Details.Configuration.AuthHeader.helper.text": {
+    "defaultMessage": "Authorization header name cannot contain spaces or special characters"
   },
   "Apis.Details.Configuration.Components.APISecurity.Components.\n                                    ApplicationLevel.http": {
     "defaultMessage": "Application Level Security"
@@ -3279,14 +3297,8 @@
   "Apis.Listing.components.ImageGenerator.ThumbnailView.uploading.btn": {
     "defaultMessage": "Uploading"
   },
-  "Apis.Listing.components.TopMenu.api": {
-    "defaultMessage": "API(s)"
-  },
   "Apis.Listing.components.TopMenu.api.singular": {
     "defaultMessage": "API"
-  },
-  "Apis.Listing.components.TopMenu.apiproduct(s)": {
-    "defaultMessage": "API Product(s)"
   },
   "Apis.Listing.components.TopMenu.apiproduct.singular": {
     "defaultMessage": "API Product"
@@ -3307,7 +3319,7 @@
     "defaultMessage": "Total:"
   },
   "Apis.Listing.components.TopMenu.search.results": {
-    "defaultMessage": "Search Result(s)"
+    "defaultMessage": "Search Results"
   },
   "Apis.Listing.components.TopMenu.search.results.singular": {
     "defaultMessage": "Search Result"
@@ -3347,6 +3359,12 @@
   },
   "Applications.Details.Invoice.view.btn": {
     "defaultMessage": "View Invoice"
+  },
+  "Base.Errors.AuthorizedError.default_body": {
+    "defaultMessage": "User is not authorized to access the API"
+  },
+  "Base.Errors.AuthorizedError.default_tittle": {
+    "defaultMessage": "Authorized Error"
   },
   "Base.Errors.ResourceNotFound.api.list": {
     "defaultMessage": "API List"
@@ -3656,6 +3674,15 @@
   },
   "ServiceCatalog.Listing.Listing.heading": {
     "defaultMessage": "Service Catalog"
+  },
+  "ServiceCatalog.Listing.Listing.heading.displaying.service": {
+    "defaultMessage": "Service"
+  },
+  "ServiceCatalog.Listing.Listing.heading.displaying.services": {
+    "defaultMessage": "Services"
+  },
+  "ServiceCatalog.Listing.Listing.heading.displaying.total": {
+    "defaultMessage": "Total:"
   },
   "ServiceCatalog.Listing.Listing.service.deleted.successfully": {
     "defaultMessage": "Service deleted successfully!"
